knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/eMAC_Revenue__c.field-meta.xml
<CustomField>
    <fullName>eMAC_Revenue__c</fullName>
    <label>eMAC Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>