knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Employed_Outsourced_Leaseback__c.field-meta.xml
<CustomField>
    <fullName>Employed_Outsourced_Leaseback__c</fullName>
    <label>Employed / Outsourced / Leaseback</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Leaseback</fullName>
            </value>
            <value>
                <fullName>RCS Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>