knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Exec_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Exec_Leadership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exec Leadership</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>