knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Existing_Margin__c.field-meta.xml
<CustomField>
    <fullName>Existing_Margin__c</fullName>
    <inlineHelpText>Enter the existing Margin for the client/service line.  This value is used to calculate the &apos;Incremental Margin&apos; by subtracting this value from the &apos;Total Margin&apos;.</inlineHelpText>
    <label>Existing Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>