knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Expected_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Decision_Date__c</fullName>
    <label>Expected Decision Date</label>
    <type>Date</type>
</CustomField>