knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Expected_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sign_Date__c</fullName>
    <description>Expected Sign Date</description>
    <label>Expected Sign Date</label>
    <type>Date</type>
</CustomField>