knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>