knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/External_Contact_Lead__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Lead__c</fullName>
    <description>Other External Contact who provided Lead (if applicable)</description>
    <inlineHelpText>Other External Contact who provided Lead (if applicable)</inlineHelpText>
    <label>Other External Contact who provided Lead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>