knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/External_Contact_Opp_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Opp_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Contact Opp Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>TSG Internal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (External Contact who provided Oppty)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>