knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Facility_Services__c.field-meta.xml
<CustomField>
    <fullName>Facility_Services__c</fullName>
    <label>Facility Services</label>
    <length>250</length>
    <type>Text</type>
</CustomField>