knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Finance_Proforma_Lead__c.field-meta.xml
<CustomField>
    <fullName>Finance_Proforma_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Proforma Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>