knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/First_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Meeting Held</label>
    <type>Checkbox</type>
</CustomField>