knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/First_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>First_Meeting_Scheduled__c</fullName>
    <description>Date First Meeting is scheduled for</description>
    <inlineHelpText>Select the date that the first meeting with the client related to the opportunity is scheduled</inlineHelpText>
    <label>First Meeting Scheduled</label>
    <type>Date</type>
</CustomField>