knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/FTEs_in_Proforma__c.field-meta.xml
<CustomField>
    <fullName>FTEs_in_Proforma__c</fullName>
    <label>FTEs in Proforma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>