knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Green_Light_for_Client_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Green_Light_for_Client_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Green Light for Client Outreach</label>
    <type>Checkbox</type>
</CustomField>