knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/HM_Encounter_Volume__c.field-meta.xml
<CustomField>
    <fullName>HM_Encounter_Volume__c</fullName>
    <label>HM Encounter Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>