knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/HM_Margin_w_o_Revenue_Sharing__c.field-meta.xml
<CustomField>
    <fullName>HM_Margin_w_o_Revenue_Sharing__c</fullName>
    <label>HM Margin w/o Revenue Sharing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>