knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/HM_MDs_On_Call_Night__c.field-meta.xml
<CustomField>
    <fullName>HM_MDs_On_Call_Night__c</fullName>
    <label>HM # MDs On-Call/Night</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>