knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/HM_NP_PAs_Nocturnist__c.field-meta.xml
<CustomField>
    <fullName>HM_NP_PAs_Nocturnist__c</fullName>
    <label>HM # NP/PAs Nocturnist</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>