knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/HM_Scribes_Nocturnists__c.field-meta.xml
<CustomField>
    <fullName>HM_Scribes_Nocturnists__c</fullName>
    <label>HM # Scribes Nocturnists</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>