knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/HM_Scribes_Rounders_Day__c.field-meta.xml
<CustomField>
    <fullName>HM_Scribes_Rounders_Day__c</fullName>
    <label>HM # Scribes Rounders/Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>