knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/ICP_Encounter_Volume__c.field-meta.xml
<CustomField>
    <fullName>ICP_Encounter_Volume__c</fullName>
    <label>ICP Encounter Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>