knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/ICP_Encounters__c.field-meta.xml
<CustomField>
    <fullName>ICP_Encounters__c</fullName>
    <label>ICP Encounters</label>
    <summarizedField>Services__c.Annual_Encounters__c</summarizedField>
    <summaryFilterItems>
        <field>Services__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Integrated Care Physician (ICP)</value>
    </summaryFilterItems>
    <summaryForeignKey>Services__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>