knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/ICU_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>ICU_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICU Incumbent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (ICU Incumbent)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>