knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <label>Kick-Off Date</label>
    <type>Date</type>
</CustomField>