knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Include_in_War_Room__c.field-meta.xml
<CustomField>
    <fullName>Include_in_War_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check = Yes</inlineHelpText>
    <label>Include in War Room</label>
    <type>Checkbox</type>
</CustomField>