knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Include_in_Win_Loss_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Win_Loss_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if the opportunity should be included in the win/loss calculation.  Determined by sales leadership.</inlineHelpText>
    <label>Include in Win/Loss Calculation</label>
    <type>Checkbox</type>
</CustomField>