knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Incremental_Margin__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Margin__c</fullName>
    <formula>Total_CORE_Operating_Margin__c  -  Existing_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value is calculated by Subtracting the &apos;Total Margin&apos; from the &apos;Existing Margin&apos; to identify the net incremental margin the deal is providing.</inlineHelpText>
    <label>Incremental Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>