knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/INFO_DUE_Date_for_All_Inputs__c.field-meta.xml
<CustomField>
    <fullName>INFO_DUE_Date_for_All_Inputs__c</fullName>
    <description>Created as part of PR1050558-2143</description>
    <label>INFO DUE Date for All Inputs</label>
    <type>Date</type>
</CustomField>