knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Interested_in_Non_Core__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Non_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check = Yes</inlineHelpText>
    <label>Interested in Non-Core</label>
    <type>Checkbox</type>
</CustomField>