knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Invalid_Solo_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Solo_Deal__c</fullName>
    <formula>if(text(Deal__r.Status__c) !=  Win_Loss_Open__c &amp;&amp;  Deal__r.Count_of_Opportunities__c = 1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invalid Solo Deal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>