knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Is_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Updated</label>
    <type>Checkbox</type>
</CustomField>