knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/IsRequestStageProgression__c.field-meta.xml
<CustomField>
    <fullName>IsRequestStageProgression__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is check every time Request Stage Progression is changed and will trigger Appproval Process (Request Opportunitie´s Progression).   DO NOT DELETE.</description>
    <label>IsRequestStageProgression</label>
    <type>Checkbox</type>
</CustomField>