knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Last_Activity_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_c__c</fullName>
    <label>Last Activity Date (Custom)</label>
    <type>DateTime</type>
</CustomField>