knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Last_Time_Bid__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Bid__c</fullName>
    <label>Last Time Bid</label>
    <type>Date</type>
</CustomField>