knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Lead_Generation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>b/w 0% to 25%</inlineHelpText>
    <label>Lead Generation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>