knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Inbound Phone</fullName>
            </value>
            <value>
                <fullName>Inbound Email</fullName>
            </value>
            <value>
                <fullName>Inbound Website</fullName>
            </value>
            <value>
                <fullName>Inbound Google Adwords</fullName>
            </value>
            <value>
                <fullName>Inbound In-person</fullName>
            </value>
            <value>
                <fullName>Outbound Phone</fullName>
            </value>
            <value>
                <fullName>Outbound Email</fullName>
            </value>
            <value>
                <fullName>Outbound In-person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>