knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Legacy_Company_Sales__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Company_Sales__c</fullName>
    <label>Legacy Company Sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECI</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>HPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>