knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Account.texcellency__DefHC_State__c &amp; &apos;, &apos; &amp; Account.texcellency__DefHC_HQCity__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>