knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/LOI_Complete__c.field-meta.xml
<CustomField>
    <fullName>LOI_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check = Yes</inlineHelpText>
    <label>LOI Complete</label>
    <type>Checkbox</type>
</CustomField>