knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Managed_Care_DL__c.field-meta.xml
<CustomField>
    <fullName>Managed_Care_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Care DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Managed Care DL)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>