knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Total Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>