knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Matches_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Matches_Deal_Status__c</fullName>
    <formula>text(Deal__r.Status__c) =  Win_Loss_Open__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matches Deal Status</label>
    <type>Checkbox</type>
</CustomField>