knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee__c</fullName>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>