knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/MOU_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>MOU_Date_Signed__c</fullName>
    <label>MOU Date Signed</label>
    <type>Date</type>
</CustomField>