knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/MOU_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>MOU_Sign_Date__c</fullName>
    <label>MOU Sign Date</label>
    <type>Date</type>
</CustomField>