knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/MOU_Signed__c.field-meta.xml
<CustomField>
    <fullName>MOU_Signed__c</fullName>
    <label>MOU Signed</label>
    <summaryFilterItems>
        <field>Opportunity_Attachment__c.Document_Type__c</field>
        <operation>equals</operation>
        <value>MOU</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity_Attachment__c.Final__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Attachment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>