knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/MOU_Signed_by_Client__c.field-meta.xml
<CustomField>
    <fullName>MOU_Signed_by_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOU Signed by Client</label>
    <type>Checkbox</type>
</CustomField>