knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/MSA_Revenue__c.field-meta.xml
<CustomField>
    <fullName>MSA_Revenue__c</fullName>
    <label>MSA Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>