knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Must_Win_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Must_Win_Qtr__c</fullName>
    <label>Must Win Qtr.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2015 Q3</fullName>
            </value>
            <value>
                <fullName>2015 Q4</fullName>
            </value>
            <value>
                <fullName>2016 Q1</fullName>
            </value>
            <value>
                <fullName>2016 Q2</fullName>
            </value>
            <value>
                <fullName>2016 Q3</fullName>
            </value>
            <value>
                <fullName>2016 Q4</fullName>
            </value>
            <value>
                <fullName>2017 Q1</fullName>
            </value>
            <value>
                <fullName>2017 Q2</fullName>
            </value>
            <value>
                <fullName>2017 Q3</fullName>
            </value>
            <value>
                <fullName>2017 Q4</fullName>
            </value>
            <value>
                <fullName>None Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>