knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Next_Steps_History__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_History__c</fullName>
    <label>Next Steps History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>