knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Number_of_Facilities_in_Scope__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Facilities_in_Scope__c</fullName>
    <label># of Facilities in Scope</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>