knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Number_of_Facilities_in_this_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Facilities_in_this_Opportunity__c</fullName>
    <label># of Facilities in this Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>