knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Onboarding_Solutioning_DL__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Solutioning_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding / Solutioning DL</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Onboarding / Solutioning DL)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>