knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Open_or_Closed__c.field-meta.xml
<CustomField>
    <fullName>Open_or_Closed__c</fullName>
    <formula>IF(
    ISPICKVAL(StageName, &quot;Closed-No Bid&quot;) ||
    ISPICKVAL(StageName, &quot;Closed Lost&quot;) ||
    ISPICKVAL(StageName, &quot;Closed - SCP Declined&quot;) ||
    ISPICKVAL(StageName, &quot;Closed - Client Abandoned Proposal&quot;) ||
    ISPICKVAL(StageName, &quot;Closed - No Change&quot;) ||
    ISPICKVAL(StageName, &quot;Implement&quot;) ||
    ISPICKVAL(StageName, &quot;Confirm Customer Satisfaction&quot;) ||
    ISPICKVAL(StageName, &quot;Closed - No Change/Lost&quot;),
    &quot;Closed&quot;,
    &quot;Open&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open or Closed</label>
    <type>Text</type>
</CustomField>