knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Operating_Margin__c.field-meta.xml
<CustomField>
    <fullName>Operating_Margin__c</fullName>
    <label>Operating Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>