knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/OPP_CNT__c.field-meta.xml
<CustomField>
    <fullName>OPP_CNT__c</fullName>
    <defaultValue>1</defaultValue>
    <label>OPP CNT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>