knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Opportunity_Age__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age__c</fullName>
    <formula>IF(NOT(ISBLANK(CloseDate)), (CloseDate-DATEVALUE(CreatedDate)),Today()- DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Close Date - Created Date = Opportunity Age in Days</inlineHelpText>
    <label>Opportunity Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>