knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Opportunity/fields/Opportunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Level__c</fullName>
    <formula>TEXT(Account.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Level</label>
    <type>Text</type>
</CustomField>